Fix error message popup Z-index issue

--- a/src/components/ui/sonner.css
+++ b/src/components/ui/sonner.css
@@ -1,4 +1,9 @@
 section[aria-label^='Notifications'] {
   padding: 0 !important;
   margin: 0 !important;
+  z-index: 99999 !important;
+}
+
+[data-sonner-toaster] {
+  z-index: 99999 !important;
 }
